<resources>
    <string name="app_name">Poetry</string>
    <string name="empty_string"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_view_mode">View Modes</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_undo">Undo</string>
    <string name="action_make_copy">Make a copy</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_add_tags">Add Tag</string>
    <string name="action_manual_sync">Sync manually</string>
    <string name="action_about">About</string>
    <string name="action_signout">Sign out</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_add_category">Create new category</string>
    <string name="author_name">Anonymous</string>
    <string name="hint_edit_title">Title</string>
    <string name="hint_edit_note">Note</string>
    <string name="hint_edit_category">Enter category name</string>
    <string name="hint_edit_tag">Enter tag name</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="title_activity_manage_category">Manage Categories</string>
    <string name="title_activity_manage_tag">Manage Tags</string>
    <string name="title_activity_sync">Sync Data</string>
    <string name="title_request_permission">Poetry needs your permission</string>
    <string name="title_restore_dialog">Restore Poetry data</string>
    <string name="title_backup_dialog">Backup Poetry data</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_add_tag">Add Tag</string>
    <string name="title_delete_confirm">Delete</string>
    <string name="message_request_permission_read">
        "Please allow us to access:\n\n"
        "- External Storage Access Permission for read backup file"
    </string>
    <string name="message_request_permission_write">
        "Please allow us to access:\n\n"
        "- External Storage Access Permission for write backup file"
    </string>
    <string name="message_request_permission_sync">
        "Please allow us to access:\n\n"
        "- Sync settings Access Permission for data sync."
    </string>
    <string name="message_loading">Loading …</string>
    <string name="message_restore_process">Restoring data …</string>
    <string name="message_backup_file_not_found">Backup file not found in your storage</string>
    <string name="message_restore_warning">Warning: Current data will replaced by data backup. Continue?</string>
    <string name="message_restore_complete">Restore complete</string>
    <string name="message_backup_override">Backup file is already exists.\nAre you want to override?</string>
    <string name="message_backup_process">Backup is processing …</string>
    <string name="message_backup_complete">Backup complete</string>
    <string name="message_no_data">Empty</string>
    <string name="message_delete_confirm">Are you sure to delete?</string>
    <string name="message_sign_in_failed">Can not sign in to account.</string>
    <string name="transition_root">transition_root</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_note">transition_note</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_manage">Manage</string>
    <string name="prefs_category_about">About</string>
    <string name="prefs_select_theme">Select Theme</string>
    <string name="prefs_theme_light">Light theme</string>
    <string name="prefs_theme_dark">Dark theme</string>
    <string name="prefs_theme_battery">Auto battery</string>
    <string name="prefs_theme_system">Follow system</string>
    <string name="prefs_select_theme_def">0</string>
    <string-array name="prefs_select_theme_titles">
        <item>@string/prefs_theme_light</item>
        <item>@string/prefs_theme_dark</item>
        <item>@string/prefs_theme_battery</item>
        <item>@string/prefs_theme_system</item>
    </string-array>
    <string-array name="prefs_select_theme_values">
        <item>light</item>
        <item>dark</item>
        <item>battery</item>
        <item>system</item>
    </string-array>
    <string name="prefs_author">Author Name</string>
    <string name="prefs_author_summary">Change display author name</string>
    <string name="prefs_manage_category">@string/title_activity_manage_category</string>
    <string name="prefs_manage_category_summary">Manage Categories of the user</string>
    <string name="prefs_manage_tags">@string/title_activity_manage_tag</string>
    <string name="prefs_manage_tags_summary">Manage Tags of the user</string>
    <string name="prefs_mmfont">Embed font</string>
    <string name="prefs_mmfont_summary">Embed Myanmar Text font</string>
    <string name="prefs_backup">Backup</string>
    <string name="prefs_backup_summary">Backing up the Poetry data</string>
    <string name="prefs_restore">Restore</string>
    <string name="prefs_restore_summary">Restoring the Poetry data</string>
    <string name="prefs_sync">Sync Data</string>
    <string name="prefs_sync_summary">Firebase firestore sync</string>
    <string name="prefs_about">About Poetry</string>
    <string name="version_text">Version - %s</string>
    <string name="about_text">
        "&lt;p&gt;Develop by &lt;a href=&apos;http://www.facebook.com/soeminnminn&apos;&gt;Soe Minn Minn&lt;/a&gt;&lt;/p&gt;"
        "&lt;p&gt;Copyright \u00A9 2019 The Android Open Source Project&lt;/p&gt;"
    </string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supersede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efficient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>