<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/prefs_category_general">

        <androidx.preference.ListPreference
                app:key="select_theme"
                app:title="@string/prefs_select_theme"
                app:defaultValue="@string/prefs_select_theme_def"
                app:entries="@array/prefs_select_theme_titles"
                app:entryValues="@array/prefs_select_theme_values" />

        <Preference
            app:key="manage_category"
            app:title="@string/prefs_manage_category"
            app:summary="@string/prefs_manage_category_summary"/>

        <Preference
                app:key="manage_tags"
                app:title="@string/prefs_manage_tags"
                app:summary="@string/prefs_manage_tags_summary"/>

        <Preference
                app:key="backup"
                app:title="@string/prefs_backup"
                app:summary="@string/prefs_backup_summary"/>

        <Preference
                app:key="restore"
                app:title="@string/prefs_restore"
                app:summary="@string/prefs_restore_summary"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/prefs_category_about">

        <Preference
                app:key="about"
                app:title="@string/prefs_about"
                app:summary="@string/version_text"/>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
