<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.DetailsActivity">

    <item android:id="@+id/action_edit"
            android:title="@string/action_edit"
            android:icon="@drawable/ic_edit"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_delete"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_delete"
            android:orderInCategory="1"
            app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_make_copy"
            android:title="@string/action_make_copy"
            android:icon="@drawable/ic_copy"
            android:orderInCategory="100"
            app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:icon="@drawable/ic_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
