<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="@dimen/dimen_0dp"
        tools:context=".activity.DetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp">

        <FrameLayout
                android:id="@+id/noteTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:background="@null"
                    android:hint="@string/hint_edit_title"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/noteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:lines="1"
                    tools:text="@string/app_name" />

        </FrameLayout>

        <FrameLayout
                android:id="@+id/noteContentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/noteTitleContainer"
                android:layout_marginTop="@dimen/dimen_16dp" >

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="?android:textColorSecondary"
                    android:background="@null"
                    android:minLines="2"
                    android:gravity="top|start"
                    android:hint="@string/hint_edit_note"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"
                    android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/noteContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="?android:textColorSecondary"
                    android:ems="100"
                    tools:text="@string/app_name"/>

        </FrameLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/noteCategory"
                style="@style/AppWidget.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/action_add_category"
                app:icon="@drawable/ic_category"
                app:layout_constraintTop_toBottomOf="@+id/noteContentContainer"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/dimen_16dp"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/noteDate"
                style="@style/AppWidget.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:lines="1"
                tools:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteContentContainer"
                android:layout_marginTop="@dimen/dimen_16dp"/>

        <com.google.android.material.chip.ChipGroup
                android:id="@+id/noteTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:chipSpacing="@dimen/dimen_4dp"
                app:layout_constraintTop_toBottomOf="@+id/noteCategory"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

            <com.google.android.material.chip.Chip
                    android:id="@+id/action_add_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_add_tags"
                    android:checkable="false"
                    app:chipIcon="@drawable/ic_add"
                    app:chipIconVisible="true" />

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>