<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.RestoreFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="?android:attr/windowTitleStyle"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:paddingLeft="?attr/dialogPreferredPadding"
                android:paddingRight="?attr/dialogPreferredPadding"
                android:paddingTop="@dimen/dialog_padding_top_material"
                android:text="@string/title_restore_dialog" />

    </LinearLayout>

    <android.widget.Space
            android:id="@+id/titleDividerNoCustom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_title_divider_material" />

    <FrameLayout
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@android:id/message"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="?attr/dialogPreferredPadding"
                android:paddingRight="?attr/dialogPreferredPadding"
                android:text="@string/message_restore_warning" />

        <RelativeLayout
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16dp"
                android:visibility="gone" >

            <com.s16.widget.MaterialProgressBar
                    android:id="@android:id/progress"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:indeterminate="true" />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/loadingMessage"
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@android:id/progress"
                    android:layout_toEndOf="@android:id/progress"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:paddingTop="@dimen/dimen_16dp"
                    android:paddingBottom="@dimen/dimen_16dp"
                    android:text="@string/message_restore_process"/>

        </RelativeLayout>

    </FrameLayout>

    <com.s16.widget.DialogButtonBar
            android:id="@+id/dialogButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

</LinearLayout>