<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SyncActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/actionbar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/dimen_4dp"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:layout_marginRight="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_4dp"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:popupTheme="?attr/popupMenuStyle"
                app:layout_collapseMode="pin"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/syncContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
                android:id="@+id/signInContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone" >

            <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="@dimen/top_image_max_height"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/img_cloudsync"
                    android:scaleType="fitCenter" />

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/signInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:layout_below="@+id/image"
                    android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/signOutContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" >

            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/infoContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_16dp" >

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_16dp" >

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/textEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textAlignment="gravity"
                            android:layout_marginTop="@dimen/dimen_16dp"
                            tools:text="@string/app_name" />

                    <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/signOutButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_16dp"
                            android:layout_below="@+id/textEmail"
                            android:text="@string/action_signout" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/syncManualButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:layout_below="@+id/infoContainer"
                    android:layout_centerHorizontal="true"
                    app:icon="@drawable/ic_sync"
                    android:text="@string/action_manual_sync"/>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>